change to use tailwind just as normal css

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/html5boilerplateDefaults.css">
-  <link rel="stylesheet" href="css/main.css">
-<!--  <link rel="stylesheet" href="css/contact-form.css">-->
+<!--  <link rel="stylesheet" href="css/normalize.css">-->
+<!--  <link rel="stylesheet" href="css/html5boilerplateDefaults.css">-->
+<!--  <link rel="stylesheet" href="css/main.css">-->
+  <link rel="stylesheet" href="css/tailwind.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
