or should I use tailwind with postCSS... what is postCSS? - oh, I need to learn 👨‍🎓

--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
 
 <!--  <link rel="stylesheet" href="css/normalize.css">-->
 <!--  <link rel="stylesheet" href="css/html5boilerplateDefaults.css">-->
-<!--  <link rel="stylesheet" href="css/main.css">-->
-  <link rel="stylesheet" href="css/tailwind.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body>
+<body class="bg-yellow-500">
 
   <header>
     <h1>🏠 wigi house 🏠</h1>
