remove mix-tailwindcss, because it works otherwise too

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body class="bg-yellow-500">
+<body class="bg-green-200">
 
   <header>
     <h1>🏠 wigi house 🏠</h1>
