--- a/index.html
+++ b/index.html
@@ -2,73 +2,78 @@
 <html class="no-js" lang="">
 
 <head>
-	<meta charset="utf-8">
-	<title>🏠 wigi house 🏠</title>
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <title>🏠 wigi house 🏠</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta property="og:title" content="">
-	<meta property="og:type" content="">
-	<meta property="og:url" content="">
-	<meta property="og:image" content="">
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
 
-	<link rel="manifest" href="site.webmanifest">
-	<link rel="apple-touch-icon" href="icon.png">
-	<!-- Place favicon.ico in the root directory -->
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
 
-	<!--  <link rel="stylesheet" href="css/normalize.css">-->
-	<!--  <link rel="stylesheet" href="css/html5boilerplateDefaults.css">-->
-	<link rel="stylesheet" href="dist/main.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Sniglet&display=swap" rel="stylesheet">
+  <!--  <link rel="stylesheet" href="css/normalize.css">-->
+  <!--  <link rel="stylesheet" href="css/html5boilerplateDefaults.css">-->
+  <link rel="stylesheet" href="dist/main.css">
 
-	<meta name="theme-color" content="#fafafa">
+  <meta name="theme-color" content="#fafafa">
 </head>
 
-<body class="bg-green-200">
+<body class="h-screen
+  text-white text-center
+  bg-gradient-to-tr from-lime-600 to-lime-300">
 
-<header>
-	<h1>🏠 wigi house 🏠</h1>
+<header class="pt-10 pb-10">
+  <h1 class="text-4xl">🏠 wigi house 🏠</h1>
 </header>
 
-<main>
-	<div class="about">
-		<p>Möchtest du gerne ein entspannte Zeit in einer gemütlichen Hütte verbringen?</p>
-		<p>Dann kann ich dir weiterhelfen 🙂</p>
-	</div>
+<main class="">
+  <div id="about">
+    <p>Möchtest du gerne ein entspannte Zeit in einer gemütlichen Hütte verbringen?</p>
+    <p>Dann kann ich dir weiterhelfen 🙂</p>
+  </div>
 
-	<div class="calendar">
-		<iframe src="https://calendar.google.com/calendar/embed?bgcolor=%23e0c977&amp;src=nh33ss190cir938nhvuh7ho4n4%40group.calendar.google.com&amp;ctz=Europe%2FZurich&amp;showTitle=0&amp;mode=MONTH&amp;showNav=1&amp;showDate=1&amp;showPrint=0&amp;showTabs=1&amp;showCalendars=0"
-				style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-	</div>
+  <div id="calendar">
+    <iframe
+      src="https://calendar.google.com/calendar/embed?bgcolor=%23e0c977&amp;src=nh33ss190cir938nhvuh7ho4n4%40group.calendar.google.com&amp;ctz=Europe%2FZurich&amp;showTitle=0&amp;mode=MONTH&amp;showNav=1&amp;showDate=1&amp;showPrint=0&amp;showTabs=1&amp;showCalendars=0"
+      style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+  </div>
 
-	<div class="contact">
+  <div id="contact">
 
-		<form id="waterform" method="post">
+    <form id="waterform" method="post">
 
-			<div class="formgroup" id="name-form">
-				<label for="name">Your name*</label>
-				<input type="text" id="name" name="name" />
-			</div>
+      <div class="formgroup" id="name-form">
+        <label for="name">Your name*</label>
+        <input type="text" id="name" name="name"/>
+      </div>
 
-			<div class="formgroup" id="email-form">
-				<label for="email">Your e-mail*</label>
-				<input type="email" id="email" name="email" />
-			</div>
+      <div class="formgroup" id="email-form">
+        <label for="email">Your e-mail*</label>
+        <input type="email" id="email" name="email"/>
+      </div>
 
-			<div class="formgroup" id="message-form">
-				<label for="message">Your message</label>
-				<textarea id="message" name="message"></textarea>
-			</div>
+      <div class="formgroup" id="message-form">
+        <label for="message">Your message</label>
+        <textarea id="message" name="message"></textarea>
+      </div>
 
-			<input type="submit" value="Send your message!" />
-		</form>
+      <input type="submit" value="Send your message!"/>
+    </form>
 
-	</div>
+  </div>
 </main>
 
 <footer>
-	<address>
-		by Silvan Wigert 🦸‍
-	</address>
+  <address>
+    by Silvan Wigert 🦸‍
+  </address>
 </footer>
 
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
@@ -77,15 +82,15 @@
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 <script>
-	window.ga = function () {
-		ga.q.push(arguments);
-	};
-	ga.q = [];
-	ga.l = +new Date;
-	ga('create', 'UA-XXXXX-Y', 'auto');
-	ga('set', 'anonymizeIp', true);
-	ga('set', 'transport', 'beacon');
-	ga('send', 'pageview');
+  window.ga = function () {
+    ga.q.push(arguments);
+  };
+  ga.q = [];
+  ga.l = +new Date;
+  ga('create', 'UA-XXXXX-Y', 'auto');
+  ga('set', 'anonymizeIp', true);
+  ga('set', 'transport', 'beacon');
+  ga('send', 'pageview');
 </script>
 <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
