--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 </head>
 
-<body class="h-screen
-  text-white text-center
-  bg-gradient-to-br from-orange-300 to-amber-700">
+<body class="h-screen text-center bg-gradient-to-br from-orange-300 to-amber-700">
 
 <header class="relative overflow-hidden">
   <div class="max-w-7xl mx-auto">
@@ -56,7 +54,9 @@
                 <button
                   @click="isOpen = !isOpen"
                   type="button"
-                  class="bg-orange-300 rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
+                  class="bg-cyan-700 rounded-md p-2 inline-flex items-center justify-center
+                    text-orange-300 hover:text-cyan-700 hover:bg-orange-300
+                    focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
                   id="main-menu" aria-haspopup="true">
                   <span class="sr-only">Open main menu</span>
                   <!-- Heroicon name: outline/menu -->
@@ -71,11 +71,9 @@
 
           <!-- desktop nav -->
           <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
-            <a href="#calendar" class="font-medium text-gray-500 hover:text-gray-900">📆 Kalender</a>
-
-            <a href="#contact" class="font-medium text-gray-500 hover:text-gray-900">👨‍🏭 Kontakt</a>
-
-            <a href="#gallery" class="font-medium text-gray-500 hover:text-gray-900">🖼️ Bilder</a>
+            <a href="#calendar" class="font-medium text-cyan-700 hover:text-orange-50">📆 Kalender</a>
+            <a href="#contact" class="font-medium text-cyan-700 hover:text-orange-50">👨‍🏭 Kontakt</a>
+            <a href="#gallery" class="font-medium text-cyan-700 hover:text-orange-50">🖼️ Bilder</a>
           </div>
         </nav>
       </div>
@@ -90,7 +88,9 @@
         x-transition:leave-start="opacity-100 scale-100"
         x-transition:leave-end="opacity-0 scale-95"
         class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden">
-        <div class="rounded-lg shadow-md bg-gradient-to-br from-orange-300 to-amber-700 ring-1 ring-black ring-opacity-5 overflow-hidden">
+        <div
+          class="rounded-lg shadow-md bg-gradient-to-br from-orange-300 to-amber-700
+            ring-1 ring-black ring-opacity-5 overflow-hidden">
           <div class="px-5 pt-4 flex items-center justify-between">
 
             <!-- logo-->
@@ -103,7 +103,9 @@
               <button
                 @click="isOpen = !isOpen"
                 type="button"
-                class="bg-orange-300 rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+                class="bg-cyan-700 rounded-md p-2 inline-flex items-center justify-center
+                  text-orange-300 hover:text-cyan-700 hover:bg-orange-300
+                  focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
                 <span class="sr-only">Close main menu</span>
                 <!-- Heroicon name: outline/x -->
                 <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -118,15 +120,18 @@
           <div role="menu" aria-orientation="vertical" aria-labelledby="main-menu">
             <div class="px-2 pt-2 pb-3 space-y-1" role="none">
               <a href="#calendar"
-                 class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
+                 class="block px-3 py-2 rounded-md text-base font-medium
+                  text-cyan-700 hover:text-orange-300 hover:bg-cyan-700"
                  role="menuitem">📆 Kalender</a>
 
               <a href="#contact"
-                 class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
+                 class="block px-3 py-2 rounded-md text-base font-medium
+                  text-cyan-700 hover:text-orange-300 hover:bg-cyan-700"
                  role="menuitem">👨‍🏭 Kontakt</a>
 
               <a href="#gallery"
-                 class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
+                 class="block px-3 py-2 rounded-md text-base font-medium
+                  text-cyan-700 hover:text-orange-300 hover:bg-cyan-700"
                  role="menuitem">🖼️ Bilder</a>
             </div>
           </div>
@@ -138,15 +143,17 @@
         <div class="sm:text-center lg:text-left">
           <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
             <span class="block xl:inline">🏠 wigi house 🏠</span>
-            <span class="mt-2.5 block text-indigo-600 xl:inline">miete dir eine Berghütte 😉</span>
+            <span class="mt-2.5 block text-cyan-700 xl:inline">miete dir eine Berghütte 😉</span>
           </h1>
-          <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
+          <p class="mt-3 text-base sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
             Möchtest du gerne ein entspannte Zeit in einer gemütlichen Hütte verbringen?
           </p>
           <div class="mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
             <div class="rounded-md shadow">
               <a href="#contact"
-                 class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 md:py-4 md:text-lg md:px-10">
+                 class="w-full flex items-center justify-center px-8 py-3 border border-transparent
+                  text-base font-medium rounded-md text-orange-50 bg-cyan-700
+                  hover:bg-orange-300 hover:text-cyan-700 md:py-4 md:text-lg md:px-10">
                 da kann ich dir weiterhelfen 🙂
               </a>
             </div>
