--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   type="button"
                   class="bg-cyan-700 rounded-md p-2 inline-flex items-center justify-center
                     text-orange-300 hover:text-cyan-700 hover:bg-orange-300
-                    focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
+                    focus:outline-none focus:ring-2 focus:ring-inset focus:ring-cyan-500"
                   id="main-menu" aria-haspopup="true">
                   <span class="sr-only">Open main menu</span>
                   <!-- Heroicon name: outline/menu -->
@@ -121,7 +121,7 @@
                 type="button"
                 class="bg-cyan-700 rounded-md p-2 inline-flex items-center justify-center
                   text-orange-300 hover:text-cyan-700 hover:bg-orange-300
-                  focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+                  focus:outline-none focus:ring-2 focus:ring-inset focus:ring-cyan-500">
                 <span class="sr-only">Close main menu</span>
                 <!-- Heroicon name: outline/x -->
                 <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -261,16 +261,16 @@
                 <label for="first_name" class="block text-sm font-medium text-cyan-700">Vorname</label>
                 <div class="mt-1">
                   <input type="text" name="first_name" id="first_name" autocomplete="given-name"
-                         class="block w-full shadow-sm sm:text-sm focus:ring-indigo-500
-                          focus:border-indigo-500 border-gray-300 rounded-md">
+                         class="block w-full shadow-sm sm:text-sm focus:ring-cyan-500
+                          focus:border-cyan-500 border-gray-300 rounded-md">
                 </div>
               </div>
               <div class="sm:col-span-5">
                 <label for="last_name" class="block text-sm font-medium text-cyan-700">Nachname</label>
                 <div class="mt-1">
                   <input type="text" name="last_name" id="last_name" autocomplete="family-name"
-                         class="block w-full shadow-sm sm:text-sm focus:ring-indigo-500
-                          focus:border-indigo-500 border-gray-300 rounded-md">
+                         class="block w-full shadow-sm sm:text-sm focus:ring-cyan-500
+                          focus:border-cyan-500 border-gray-300 rounded-md">
                 </div>
               </div>
               <div class="sm:col-span-10">
@@ -280,8 +280,8 @@
                 </div>
                 <div class="mt-1">
                   <input id="email" name="email" type="email" autocomplete="email"
-                         class="block w-full shadow-sm sm:text-sm focus:ring-indigo-500
-                          focus:border-indigo-500 border-gray-300 rounded-md">
+                         class="block w-full shadow-sm sm:text-sm focus:ring-cyan-500
+                          focus:border-cyan-500 border-gray-300 rounded-md">
                 </div>
               </div>
               <div class="sm:col-span-10">
@@ -291,40 +291,40 @@
                 </div>
                 <div class="mt-1">
                   <input type="text" name="phone" id="phone" autocomplete="tel"
-                         class="block w-full shadow-sm sm:text-sm focus:ring-indigo-500
-                          focus:border-indigo-500 border-gray-300 rounded-md">
+                         class="block w-full shadow-sm sm:text-sm focus:ring-cyan-500
+                          focus:border-cyan-500 border-gray-300 rounded-md">
                 </div>
               </div>
               <div class="sm:col-span-3">
                 <label for="date-from" class="block text-sm font-medium text-cyan-700">Von...</label>
                 <div class="mt-1">
                   <input type="date" name="date-from" id="date-from" autocomplete="given-name"
-                         class="block w-full shadow-sm sm:text-sm focus:ring-indigo-500
-                          focus:border-indigo-500 border-gray-300 rounded-md">
+                         class="block w-full shadow-sm sm:text-sm focus:ring-cyan-500
+                          focus:border-cyan-500 border-gray-300 rounded-md">
                 </div>
               </div>
               <div class="sm:col-span-2">
                 <label for="time-from" class="block text-sm font-medium text-cyan-700">...um ca. ...</label>
                 <div class="mt-1">
                   <input type="time" name="time-from" id="time-from" autocomplete="given-name"
-                         class="block w-full shadow-sm sm:text-sm focus:ring-indigo-500
-                          focus:border-indigo-500 border-gray-300 rounded-md">
+                         class="block w-full shadow-sm sm:text-sm focus:ring-cyan-500
+                          focus:border-cyan-500 border-gray-300 rounded-md">
                 </div>
               </div>
               <div class="sm:col-span-3">
                 <label for="date-to" class="block text-sm font-medium text-cyan-700">... bis ...</label>
                 <div class="mt-1">
                   <input type="date" name="date-to" id="date-to" autocomplete="family-name"
-                         class="block w-full shadow-sm sm:text-sm focus:ring-indigo-500
-                          focus:border-indigo-500 border-gray-300 rounded-md">
+                         class="block w-full shadow-sm sm:text-sm focus:ring-cyan-500
+                          focus:border-cyan-500 border-gray-300 rounded-md">
                 </div>
               </div>
               <div class="sm:col-span-2">
                 <label for="time-to" class="block text-sm font-medium text-cyan-700">...um ca. ...</label>
                 <div class="mt-1">
                   <input type="time" name="time-to" id="time-to" autocomplete="given-name"
-                         class="block w-full shadow-sm sm:text-sm focus:ring-indigo-500
-                          focus:border-indigo-500 border-gray-300 rounded-md">
+                         class="block w-full shadow-sm sm:text-sm focus:ring-cyan-500
+                          focus:border-cyan-500 border-gray-300 rounded-md">
                 </div>
               </div>
               <div class="sm:col-span-10">
@@ -335,8 +335,8 @@
                 <div class="mt-1">
                   <textarea id="how_can_we_help" name="how_can_we_help" aria-describedby="how_can_we_help_description"
                             rows="4"
-                            class="block w-full shadow-sm sm:text-sm focus:ring-indigo-500
-                              focus:border-indigo-500 border-gray-300 rounded-md"></textarea>
+                            class="block w-full shadow-sm sm:text-sm focus:ring-cyan-500
+                              focus:border-cyan-500 border-gray-300 rounded-md"></textarea>
                 </div>
               </div>
               <fieldset class="sm:col-span-10">
@@ -346,14 +346,14 @@
                 <div class="mt-4 grid grid-cols-1 gap-y-4">
                   <div class="flex items-center">
                     <input id="budget_under_25k" name="budget" value="under_25k" type="radio"
-                           class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300">
+                           class="focus:ring-cyan-500 h-4 w-4 text-cyan-600 border-gray-300">
                     <label for="budget_under_25k" class="ml-3">
                       <span class="block text-sm text-cyan-700">Jop</span>
                     </label>
                   </div>
                   <div class="flex items-center">
                     <input id="budget_25k-50k" name="budget" value="25k-50k" type="radio"
-                           class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300">
+                           class="focus:ring-cyan-500 h-4 w-4 text-cyan-600 border-gray-300">
                     <label for="budget_25k-50k" class="ml-3">
                       <span class="block text-sm text-cyan-700">Ne</span>
                     </label>
@@ -362,7 +362,10 @@
               </fieldset>
               <div class="text-center sm:col-span-10">
                 <button type="submit"
-                        class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                        class="inline-flex justify-center py-2 px-4 border border-transparent
+                          shadow-sm text-sm font-medium rounded-md text-orange-50 hover:text-cyan-700
+                          bg-cyan-600 hover:bg-orange-50
+                          focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
                   Absenden 📬
                 </button>
               </div>
